--- a/.github/workflows/build-for-arm64.yml
+++ b/.github/workflows/build-for-arm64.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Install cross complier
       run: sudo apt install gcc-aarch64-linux-gnu -y
     
-    - name: Set up Android NDK r23b
+    - name: Set up Android NDK r27c
       run: | 
-        aria2c -o android-ndk-r23b-linux.zip https://dl.google.com/android/repository/android-ndk-r23b-linux.zip
-        unzip -q -d ~ android-ndk-r23b-linux.zip
+        aria2c -o android-ndk-r27c-linux.zip https://dl.google.com/android/repository/android-ndk-r27c-linux.zip
+        unzip -q -d ~ android-ndk-r27c-linux.zip
       
     - name: Build
       run: |
