--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,10 @@ jobs:
     - name: Install LLVM
       run: sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
     
-    - name: Set up Android NDK r23b
+    - name: Set up Android NDK r27c
       run: | 
-        aria2c -o android-ndk-r23b-linux.zip https://dl.google.com/android/repository/android-ndk-r23b-linux.zip
-        unzip -q -d ~ android-ndk-r23b-linux.zip
+        aria2c -o android-ndk-r27c-linux.zip https://dl.google.com/android/repository/android-ndk-r27c-linux.zip
+        unzip -q -d ~ android-ndk-r27c-linux.zip
       
     - name: Build
       run: |
