--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,33 @@
-name: Build
+name: Build and Deploy to Docker & GHCR
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v4
 
-    - name: Install aria2
-      run: sudo apt install aria2 -y
+    - name: Install Dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y aria2 cmake make
 
     - name: Install LLVM
       run: sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
     
     - name: Set up Android NDK r27c
-      run: | 
+      run: |
         aria2c -o android-ndk-r27c-linux.zip https://dl.google.com/android/repository/android-ndk-r27c-linux.zip
         unzip -q -d ~ android-ndk-r27c-linux.zip
-      
-    - name: Build
+    
+    - name: Build Project
       run: |
         mkdir build
         cd build
@@ -34,16 +36,46 @@ jobs:
 
     - name: Set outputs
       id: vars
-      run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-    - name: Upload artifact
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Wrapper.x86_64.${{ steps.vars.outputs.sha_short }}
-        include-hidden-files: true
+        name: Wrapper.x86_64.${{ env.sha_short }}
         path: |
           rootfs
           wrapper
           Dockerfile
-        
 
+  docker:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Log in to GitHub Container Registry (GHCR)
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
+
+    - name: Build and Push Docker Image
+      run: |
+        docker build -t genzpn/wrapper:${{ env.sha_short }} .
+        docker tag genzpn/wrapper:${{ env.sha_short }} genzpn/wrapper:latest
+        docker push genzpn/wrapper:${{ env.sha_short }}
+        docker push genzpn/wrapper:latest
+
+        docker tag genzpn/wrapper:${{ env.sha_short }} ghcr.io/genzpn/wrapper:${{ env.sha_short }}
+        docker tag genzpn/wrapper:latest ghcr.io/genzpn/wrapper:latest
+        docker push ghcr.io/genzpn/wrapper:${{ env.sha_short }}
+        docker push ghcr.io/genzpn/wrapper:latest
