--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Set outputs
       id: vars
-      run: echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      run: echo "SHA_SHORT=x86_64" >> $GITHUB_ENV
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
@@ -63,7 +63,7 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}
 
     - name: Get Commit SHA
-      run: echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      run: echo "SHA_SHORT=x86_64" >> $GITHUB_ENV
 
     - name: Build and Push Docker Image to GHCR
       run: |
