--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,14 @@ jobs:
       uses: lukka/get-cmake@latest
       
     - name: Setup MinGW
-      uses: egor-tensin/setup-mingw@v2
+      uses: msys2/setup-msys2@v2
       with:
-        platform: x64
+        msystem: mingw64
+        update: true
+        install: >-
+          mingw-w64-x86_64-gcc
+          mingw-w64-x86_64-cmake
+          mingw-w64-x86_64-make
         
     - name: Download Android NDK
       run: |
@@ -29,12 +34,12 @@ jobs:
       shell: pwsh
 
     - name: Build Project
+      shell: msys2 {0}
       run: |
         mkdir build
         cd build
-        cmake -G "MinGW Makefiles" ..
-        mingw32-make
-      shell: pwsh
+        cmake -G "Unix Makefiles" ..
+        make
 
     - name: Set outputs
       run: echo "SHA_SHORT=Windows.x86_64" >> $env:GITHUB_ENV
