--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,12 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    - name: Download artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: Wrapper.x86_64.${{ env.SHA_SHORT }}
+        path: .
+
     - name: Log in to GitHub Container Registry (GHCR)
       uses: docker/login-action@v2
       with:
