--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,12 +36,14 @@ jobs:
 
     - name: Set outputs
       id: vars
-      run: echo "SHA_SHORT=x86_64" >> $GITHUB_ENV
+      run: |
+        echo "SHA_SHORT=x86_64" >> $GITHUB_OUTPUT
+        echo "SHA_SHORT=x86_64" >> $GITHUB_ENV
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Wrapper.x86_64.${{ env.SHA_SHORT }}
+        name: Wrapper.x86_64
         path: |
           rootfs
           wrapper
@@ -58,7 +60,7 @@ jobs:
     - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
-        name: Wrapper.x86_64.${{ env.SHA_SHORT }}
+        name: Wrapper.x86_64
         path: .
 
     - name: Log in to GitHub Container Registry (GHCR)
